# rdkafka-src

./: .gitmodules  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml
src/: lib.rs
tests/: integration.rs
